feature/VK-1 more frontend changes
