# TFG Angular template/src/model/user.model.ts
@@ -1,10 +1,0 @@
-import { TemplateModel } from "./template.model";
-
-export class UserModel{
-    myname:string;
-    lastname:string;
-    email:string;
-    password:string;
-    username:string;
-    template:TemplateModel[];
-}
