# virtualkeypad/src/main/java/com/rfranco/virtualkeypad/controllers/AccessApiController.java
@@ -1,9 +1,9 @@
 package com.rfranco.virtualkeypad.controllers;
 
 import com.rfranco.virtualkeypad.autogenerated.api.AccessApi;
+import com.rfranco.virtualkeypad.autogenerated.dtos.CreateUserRequest;
 import com.rfranco.virtualkeypad.autogenerated.dtos.LoginRequest;
 import com.rfranco.virtualkeypad.autogenerated.dtos.LoginResponse;
-import com.rfranco.virtualkeypad.autogenerated.dtos.UserRequest;
 import com.rfranco.virtualkeypad.services.LoginService;
 import com.rfranco.virtualkeypad.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -23,8 +23,8 @@ public class AccessApiController implements AccessApi {
     private UserService userService;
 
     @Override
-    public ResponseEntity<Void> createUser(@Valid UserRequest userRequest) {
-        this.loginservice.registerUser(userRequest);
+    public ResponseEntity<Void> createUser(@Valid CreateUserRequest createUserRequest) {
+        this.loginservice.registerUser(createUserRequest);
         return new ResponseEntity(HttpStatus.CREATED);
     }
 
@@ -32,10 +32,10 @@ public class AccessApiController implements AccessApi {
     public ResponseEntity<LoginResponse> login(@Valid LoginRequest loginRequest) {
         return new ResponseEntity(this.loginservice.loginUser(loginRequest), HttpStatus.OK);
     }
-
+/*
     @Override
     public ResponseEntity<Void> logout(@Valid LoginRequest loginRequest) {
         this.loginservice.logoutUser(loginRequest);
         return new ResponseEntity(HttpStatus.OK);
-    }
+    }*/
 }
